<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main -->
		
	<string name="app_name">QA Overflow</string>
	<string name="refresh">Refresh</string>
	<string name="new_question_main">New</string>
					
	<!-- Login -->
	
	<string name="create_account">Create Account</string>
	<string name="manage_accounts">Manage Accounts</string>
	<string name="new_account">New Account</string>
	<string name="accounts">Accounts</string>
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="website">Website</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login_instructions">Enter a website address to log into or register for. The website must be running Q2Android and have the xml-rpc receiver plugin installed.</string>
	<string name="website_hint">www.yoursite.com</string>
	<string name="missing_value">Please fill all fields</string>
	<string name="missing_website">Please enter a valid website</string>
	
	<!-- Context Menu -->

	<string name="view">View</string>
	<string name="share_link">Share Link</string>
	<string name="share_via">Share Via…</string>
		
    <!-- Preferences -->
    
	<string name="preferences">Preferences</string>
    
	<string name="helpPref">Help</string>

	<string name="streamPref">Stream Preferences</string>
	<string name="streamMax">Max # of Stream Items</string>
	<string name="contentMax">Max Content Length</string>
	<string name="contentMaxDesc">leave blank for unlimited</string>
					
	<string name="advPref">Advanced Preferences</string>
	<string name="autoUpdate">Auto Update</string>
	<string name="autoUpdateDesc">Update stream on startup</string>

	<string name="editorType">Editor Type</string>
	<string name="editorTypeDesc">Leave blank for plain text</string>
	
			
	<!-- Help -->
		
	<string name="help">Help</string>
	<string name="help_text">
	    <![CDATA[
	    <body  style="text-align:justify">
			<p>This is a simple Question2Answer client. If configured properly, it will allow you to interact with your Question2Answer install.
			<p>Step 1: (Webmaster) Install the Question2Answer XML-RPC plugin from <a href="https://github.com/NoahY/q2a-xml-rpc">https://github.com/NoahY/q2a-xml-rpc</a>
			<p>Step 2: (Webmaster) Activate and configure above plugin via Admin->Plugins and Admin->Permissions
			<p>Step 3: (App user) From the main screen menu, click "Login" and enter your website (root path, e.g. <a href="http://www.site.com/">http://www.site.com/</a>), username, and password and click "Login".  You can also register a new user by entering the website and clicking "Register", which will take you to the site.
			<p>Once you have completed these steps correctly, you should be able to interact with your Question2Answer site via the app.
		</body>
		]]>
	</string>
	
				
	<!-- Errors -->				
	
	<string name="error">Something went wrong; please check your setup and the system log</string>
	<string name="checkSetupInternet">No internet connection.</string>
	<string name="noWebsite">Please specify a website in preferences.</string>
	<string name="websiteSyntaxError">Invalid website URL</string>
	
	<!-- Misc -->	

	<string name="avatar">Avatar</string>

	<!-- Filters -->
	
	<string name="created">Latest Questions</string>
	<string name="updated">Latest Updated</string>
	<string name="acount">Most Answers</string>
	<string name="flagcount">Most Flagged</string>
	<string name="netvotes">Most Voted</string>
	<string name="views">Most Viewed</string>
	<string name="hotness">What\'s Hot</string>
	<string name="favorites">Favorites</string>
				
	<!-- Buttons -->	
	
	<string name="edit">Edit</string>
	<string name="hide">Hide</string>
	<string name="reshow">Show</string>
	<string name="delete">Delete</string>
	<string name="ask_related">Ask Related</string>
	<string name="flag">Flag</string>
	<string name="unflag">Unflag</string>
	<string name="answer">Answer</string>
	<string name="comment">Comment</string>
	
	<!-- Dialogs -->
					
	<string name="new_question">New Question</string>
	<string name="post_answer">Post Answer</string>
	<string name="post_comment">Post Comment</string>
	<string name="post_edit">Edit Post</string>
		
	<string name="submit">Submit</string>

	<string name="title_hint">Title…</string>
	<string name="content_hint">Content…</string>
	<string name="tags_hint">Spaced tags…</string>
									
	<!-- Stream -->
	
	<string name="num_views">views</string>
	<string name="answers">answers</string>
	<string name="votes">votes</string>

	<string name="prev">Prev. Page</string>
	<string name="next">Next Page</string>
		
	<string name="one_view">view</string>
	<string name="one_answer">answer</string>
	<string name="one_vote">vote</string>
	
	<!-- Options -->
	<string name="q_options">Question Options</string>

	<!-- Accounts -->
	<string name="account">Account</string>
	

    <!-- Math -->
    <string name="enter_tex">Enter TeX here:</string>
    <string name="show">Show</string>
    <string name="clear">Clear</string>
    <string name="example">Example</string>

    <string-array name="tex_examples">
        <item>\\int_{-\\infty}^{\\infty} e^{-x^2}\\, dx = \\sqrt{\\pi}</item>
        <item>\\sum_{n=1}^{\\infty}\\frac1{n^2}=\\frac{\\pi^2}6</item>
        <item>\\int_a^b f(x)\\, dx = F(b) - F(a)\\ \\text{where}\\ F\'(x)=f(x)</item>
        <item>\\left[\\begin{array}{cc}\\cos\\theta &amp; \\sin\\theta \\\\ \\sin\\theta &amp; -\\cos\\theta \\end{array}\\right]</item>
        <item>\\iint_D (\\vec\\nabla\\times\\vec F)\\cdot\\vec n\\ dS = \\oint_{\\partial D} \\vec F\\cdot d\\vec r</item>
        <item>x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}</item>
        <item>f(z_0)= \\frac1{2\\pi i}\\oint_\\gamma \\frac{f(z)}{z-z_0} dz</item>
    </string-array>
</resources>