<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
	<EditText
	    android:id="@+id/title"
	    android:hint="@string/title_hint"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:textSize="16sp"
		android:inputType="textCapSentences"
	    />
    <!--
	<EditText
	    android:id="@+id/content"
	    android:gravity="top"
	    android:hint="@string/content_hint"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:textColor="#000000"
		android:textSize="14sp"
		android:inputType="textCapSentences|textMultiLine"
		android:singleLine="false"
	    />
	    -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:gravity="top"
            android:inputType="textFilter|textMultiLine"
            android:textSize="20dp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show" />
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/newText1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <WebView
            android:id="@+id/webview"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/newText2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>


    <EditText
	    android:id="@+id/tags"
	    android:hint="@string/tags_hint"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:textSize="16sp"
	    />
</LinearLayout>
